[package]
name = "regtest-util"
version = "0.1.0"
edition = "2021"
authors = ["jbesraa jbesraa@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A simple binary that starts a bitcoin regtest with funded wallets"
readme = "README.md"
keywords = ["bitcoin", "regtest", "test"]
categories = ["bitcoin", "regtest", "test"]
repository = "https://github.com/jbesraa/regtest-util"

[dependencies]
bitcoincore-rpc = "0.18.0"
